--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.1"
   }
 }
