--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.3",
+    "otp-generator": "^4.0.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "zod": "^3.24.1"
